Import HTML shell from export template (#1201)
This adds the HTML shell from the Godot 4.4.1 export template, without
modification (except to add a trailing newline).

In future, this will be customised to require a click or keypress to
start the game.

Helps #376

---------

Co-authored-by: Will Thompson <wjt@endlessaccess.org>

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -27,7 +27,7 @@ variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
-html/custom_html_shell=""
+html/custom_html_shell="res://web/full-size.html"
 html/head_include="<meta property=\"og:title\" content=\"Threadbare\" />
 <meta property=\"og:type\" content=\"website\" />
 <meta property=\"og:description\" content=\"Rebuild an unraveling world\" />
