pre-commit: Exclude Piskel files from whitespace checks
Like SVGs, these are stored as plain text, but are not meant to be hand-edited.

The “identify” library doesn't recognise *.piskel files as images. Match
them by filename.

I submitted https://github.com/pre-commit/identify/pull/541 to teach
identify about these files; if that change is accepted and released this
could be reverted.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,8 +14,10 @@ repos:
   - id: check-illegal-windows-names
   - id: check-yaml
   - id: end-of-file-fixer
+    exclude: \.piskel$
     exclude_types: [image]
   - id: trailing-whitespace
+    exclude: \.piskel$
     exclude_types: [image]
 
 - repo: https://github.com/editorconfig-checker/editorconfig-checker
