--- a/REUSE.toml
+++ b/REUSE.toml
@@ -68,16 +68,22 @@ path = [
     "assets/first_party/**/*.aseprite",
     "assets/first_party/**/*.mp3",
     "assets/first_party/**/*.ogg",
+    "assets/first_party/**/*.ogv",
+    "assets/first_party/**/*.piskel",
     "assets/first_party/**/*.png",
     "assets/first_party/**/*.svg",
+    "assets/first_party/**/*.wav",
     "icon-256.png",
     "icon.aseprite",
     "icon.png",
     "scenes/**/*.aseprite",
     "scenes/**/*.mp3",
     "scenes/**/*.ogg",
+    "scenes/**/*.ogv",
+    "scenes/**/*.piskel",
     "scenes/**/*.png",
     "scenes/**/*.svg",
+    "scenes/**/*.wav",
 ]
 SPDX-FileCopyrightText = "The Threadbare Authors"
 SPDX-License-Identifier = "CC-BY-SA-4.0"
