Mark Sueños Nocturnos as co-maintained by its own team

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -45,3 +45,4 @@ docs/issue_template.md    @endlessm/community
 
 # StoryQuest maintainers
 scenes/quests/story_quests/stella @endlessm/games @endlessm/learning
+scenes/quests/story_quests/shjourney @endlessm/games @endlessm/suenos-nocturnos
