--- a/linux/org.endlessaccess.threadbare.yml
+++ b/linux/org.endlessaccess.threadbare.yml
@@ -20,7 +20,7 @@ modules:
   sources:
 
   - type: dir
-    path: .
+    path: ..
 
   build-commands:
   # PCK file automatically exported in CI; if building locally, in Godot go to
