ci: Don't build branches/PRs that don't affect game
Previously, pushing any branch or opening any PR would cause the game to be
built.

There are many files in the repository which don't affect the game itself;
building the game for changes to these files is wasteful.

Configure the push and PR triggers to ignore branches/PRs that only affect such
files. I compiled the list of paths by hand.

--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -8,12 +8,32 @@ on:
         description: 'Also build a Flatpak bundle'
         type: boolean
   pull_request:
+    paths-ignore: &paths_ignore
+      - '**.aseprite'
+      - '**.license'
+      - 'LICENSES/**'
+      - 'docs/**'
+      - 'script_templates/**'
+      - .editorconfig
+      - .github/CODEOWNERS
+      - .github/ISSUE_TEMPLATE
+      - .github/dependabot.yml
+      - .gitignore
+      - .mailmap
+      - .mailmap
+      - .pre-commit-config.yaml
+      - AUTHORS
+      - CODE_OF_CONDUCT.md
+      - COPYING
+      - README.md
+      - REUSE.toml
   release:
     types:
       - published
   push:
     branches:
       - '*'
+    paths-ignore: *paths_ignore
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
