--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -46,3 +46,4 @@ docs/issue_template.md    @endlessm/community
 # StoryQuest maintainers
 scenes/quests/story_quests/stella @endlessm/games @endlessm/learning
 scenes/quests/story_quests/shjourney @endlessm/games @endlessm/suenos-nocturnos
+scenes/quests/story_quests/verso     @endlessm/games @endlessm/verso
